# task-mangement-system

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/db/: mod.rs  qeury.sql
backend/src/guards/: jwt_guard.rs  mod.rs  role_guard.rs
backend/src/handlers/: auth_handlers.rs  mod.rs  project_handler.rs  task_handler.rs
backend/src/models/: error.rs  mod.rs  pagination.rs  project.rs  tasks.rs  user.rs
backend/src/routes/: auth_routes.rs  mod.rs  project_routes.rs  tasks_routes.rs
backend/src/utils/: mod.rs
frontend/: Cargo.toml
