[package]
name = "TMS"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

dotenv = "0.15"
jsonwebtoken = "9.3"
argon2 = "0.5.3"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros",
    "time",
] }
chrono = { version = "0.4", features = ["serde"] }
